# AutoMirror

./: .gitignore  README.md  main.py  pyproject.toml
auto_mirror/: __init__.py  example.py
tests/: test_example.py
