[tool.poetry]
name = "auto-mirror"
version = "0.1.0"
description = "A Python project using Poetry"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
requests = "^2.31.0"
adbutils = ">=1.0.8,<2.0.0"
scrcpy-client = "^0.4.7"
setuptools = "<68.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"