[project]
name = "automirror"
version = "0.1.0"
description = ""
authors = [
    {name = "gongshuyang",email = "gongshuyang@lixiang.com"}
]
readme = "README.md"
requires-python = ">=3.8,<3.11"
dependencies = [
    "scrcpy-client (>=0.4.7,<0.5.0)",
    "setuptools  <68.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false