[tool.poetry]
name = "automirror"
version = "0.1.0"
description = "AutoMirror project"
authors = ["gongshuyang <gongshuyang@lixiang.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scrcpy-client = "^0.4.7"
setuptools = "<68.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.incremental]
name = "automirror"